--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <!-- Re-comment both of the above <link> tags once you've seen their effect -->
 
     <!-- Create another <link> tag to import the styles.css file -->
+      <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- That file is where you will put your styles -->
   </head>
   <body>
+
     <header>
       <h1>CSS Selectors</h1>
       <h2>Playground</h2>
